0.4.1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewaygenius-demo-ingress
  # namespace: default
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: rocketscore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewaygenius-demo-service
            port:
              number: 80
  - host: copy.rocketscore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: copycat-demo-service
            port:
              number: 80
  - host: pro.rocketscore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pro-demo-service
            port:
              number: 80
  - host: next.rocketscore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next2-app-demo-service
            port:
              number: 80
  # tls:
  # - hosts:
    # - rocketscore.com
    # secretName: tls-secret
    # managedCertificate:
      # managedCertificateName: your-managed-certificate-name
